fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -420,8 +420,7 @@ padding: 32px 16px;}
 }
 .our-portfolio-link{
     position: relative;
-    overflow: hidden;
-    cursor: pointer;
+   cursor: pointer;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
 }
